# anselm

./: .gitignore  Cargo.toml  README.md
anselm_common/: Cargo.toml
anselm_hub/: Cargo.toml
anselm_scribe/: Cargo.toml
anselm_scribe/src/: config.rs  db.rs  lib.rs  main.rs  metrics.rs  models.rs  runners.rs
anselm_scribe/src/agent/: config.rs
anselm_scribe/src/history/: config.rs  main.rs
anselm_scribe/src/live/: config.rs
anselm_trader/: Cargo.toml
sql/: candles_compression_stats.sql  candles_disk_size.sql  candles_duplicates.sql  candles_duplicates_report.sql  candles_report.sql  candles_total.sql  db_compression_stats.sql  securities_total.sql  volume_date_range.sql
