[package]
name = "anselm_scribe"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
clap.workspace = true
clickhouse = { version = "0.11", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["parsing", "macros"] }
