[package]
name = "anselm_scribe"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
clap.workspace = true
clickhouse = { version = "0.11", features = ["time"] }
prometheus-client = "0.22"
# TODO: Replace reqwest with hyper
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["parsing", "macros"] }
hyper = { version = "1.3", features = ["server"] }
hyper-util = "0.1.5"
http-body-util = "0.1.1"
